# markitdown-desktop

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: build-windows.yml
packaging/: launcher.py  markitdown-desktop.spec
src/markitdown_desktop/: __init__.py  app.py  converter.py
tests/: test_converter.py
