[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "markitdown-desktop"
version = "0.1.0"
description = "Unofficial desktop app for converting documents to Markdown."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Jimin Bae" }
]
dependencies = [
  "markitdown[all]>=0.1.6",
]

[project.optional-dependencies]
dev = [
  "pyinstaller>=6.10",
  "ruff>=0.8",
]

[project.scripts]
markitdown-desktop = "markitdown_desktop.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
